example.Out encodes html

--- a/build.xml
+++ b/build.xml
@@ -129,7 +129,7 @@
 	</target>
 
 	<target name="example.jspm">
-		<jspm method="append">
+		<jspm>
 			<fileset dir="example/src" includes="**/*.jspm" />
 		</jspm>
 	</target>
